syntax = "proto3";

option java_package = "br.ufc.smarthome.models";
option java_outer_classname = "Iot";

message JoinRequestMessage {
    string name = 1;
    repeated Sensor sensors = 2;
    repeated Actuator actuators = 3;

    message Sensor {
        int32 id = 1;
        string name = 2;
    }

    message Actuator {
        int32 id = 1;
        string name = 2;
    }
}

message JoinResponseMessage {
    string id = 1;
}

message SendDataRequestMessage {
    repeated Sensor sensors = 1;
    repeated Actuator actuators = 2;

    message Sensor {
        int32 id = 1;
        double value = 2;
    }

    message Actuator {
        int32 id = 1;
        bool state = 2;
    }
}